[package]
name = "mavlink2rest-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# remove default features of mavlink
mavlink = { version = "0.10.9",  features = [ "ardupilotmega", "emit-extensions", "serde", "std"], default-features = false }

wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
