[package]
name = "mavlink2rest-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mavlink = { version = "0.10.12",  features = [ "ardupilotmega", "emit-extensions", "serde", "std"], default-features = false }

wasm-bindgen = "0.2"
js-sys = "0.3"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
json5 = "0.4.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
